--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 
 
 <nav id="topnav">
-   <a id="logo" class="nav-link" href="#">MY NAME</a>
-   <a class="nav-link" href="#">Link 1</a>
-   <a class="nav-link" href="#">Link 2</a>
-   <a class="nav-link" href="#">Link 3</a>
-   <a class="nav-link" href="#">Link 4</a>
-   <a class="nav-link" href="#">Link 5</a>
+   <a id="logo" class="nav-link" href="#">Bullshit Jobs</a>
+   <a class="nav-link" href="#form">Share Your Story</a>
+   <a class="nav-link" href="#view">Browse Stories</a>
 
    <a id="about" class="nav-link" href="#">About Me</a>
 </nav>
@@ -23,12 +20,21 @@
 <h1>Bullshit Jobs</h1>
 <p>Share your experience with bullshit jobs!</p>
 
+<section id="form">
+<iframe class="airtable-embed"
+src="https://airtable.com/embed/shrHQeEafeqNqXojC?backgroundColor=orange"
+frameborder="0" onmousewheel="" width="100%" height="533"
+style="background: transparent; border: 1px solid #ccc;"></iframe>
+</section>
+
+<section id="view">
 <iframe src='https://app.mural.co/embed/ab8a2d80-8b68-42a9-9fd1-ce2d98e3c5f0'
         width='100%'
         height='480px'
         style='min-width: 640px; min-height: 480px; background-color: #f4f4f4; border: 1px solid #efefef'
         sandbox='allow-same-origin allow-scripts allow-modals allow-popups allow-popups-to-escape-sandbox'>
 </iframe>
+</section>
 
 </body>
 </html>
