--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <nav id="topnav">
    <a id="logo" class="nav-link" href="#">Bullshit Jobs</a>
-   <a class="nav-link" href="#form">Share Your Story</a>
-   <a class="nav-link" href="#view">Browse Stories</a>
+   <!--<a class="nav-link" href="#form">Share Your Story</a>
+   <a class="nav-link" href="#view">Browse Stories</a> -->
 
    <a id="about" class="nav-link" href="#">About Me</a>
 </nav>
@@ -20,12 +20,14 @@
 <h1>Bullshit Jobs</h1>
 <p>Share your experience with bullshit jobs!</p>
 
+<!--
 <section id="form">
 <iframe class="airtable-embed"
 src="https://airtable.com/embed/shrHQeEafeqNqXojC?backgroundColor=orange"
 frameborder="0" onmousewheel="" width="100%" height="533"
 style="background: transparent; border: 1px solid #ccc;"></iframe>
 </section>
+ -->
 
 <section id="view">
 <iframe src='https://app.mural.co/embed/ab8a2d80-8b68-42a9-9fd1-ce2d98e3c5f0'
