--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 
-
 <nav id="topnav">
    <a id="logo" class="nav-link" href="#">Bullshit Jobs</a>
    <!--<a class="nav-link" href="#form">Share Your Story</a>
-   <a class="nav-link" href="#view">Browse Stories</a> -->
+   <a class="nav-link" href="#view">Browse Stories</a>
 
-   <a id="about" class="nav-link" href="#">About Me</a>
+   <a id="about" class="nav-link" href="#">About Me</a>-->
 </nav>
 
 <h1>Bullshit Jobs</h1>
