--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
 <nav id="topnav">
    <a id="logo" class="nav-link" href="#">Bullshit Jobs</a>
-   <a class="nav-link" href="share.html">Sharey</a>
+   <a class="nav-link" href="share.html">Share</a>
    <a class="nav-link" href="index.html">Browse</a>
 
    <a id="about" class="nav-link" href="#">About Me</a>
 </nav>
 
 <h1>Bullshit Jobs</h1>
-
 
 <iframe src='https://app.mural.co/embed/ab8a2d80-8b68-42a9-9fd1-ce2d98e3c5f0'
         width='100%'
