--- a/share.html
+++ b/share.html
@@ -10,7 +10,7 @@
 
   <nav id="topnav">
      <a id="logo" class="nav-link" href="#">Bullshit Jobs</a>
-     <a class="nav-link" href="share.html">Sharey</a>
+     <a class="nav-link" href="share.html">Share</a>
      <a class="nav-link" href="index.html">Browse</a>
 
      <a id="about" class="nav-link" href="#">About Me</a>
@@ -18,13 +18,10 @@
 
 <h1>Bullshit Jobs</h1>
 
-<section id="form">
 <iframe class="airtable-embed"
 src="https://airtable.com/embed/shrHQeEafeqNqXojC?backgroundColor=orange"
-frameborder="0" onmousewheel="" width="100%" height="533"
+frameborder="0" onmousewheel="" width="480px" height="800px"
 style="background: transparent; border: 1px solid #ccc;"></iframe>
-</section>
-
 
 </body>
 </html>
