--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="stylesheet" href="topnav.css">
 <head>
-   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bullshit Jobs</title>
    <link rel="stylesheet" href="topnav.css">
 </head>
