--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Eventually by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<link rel="stylesheet" href="topnav.css">
-<head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Bullshit Jobs</title>
-   <link rel="stylesheet" href="topnav.css">
-</head>
-<body>
+	<head>
+		<title>Eventually by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Google Font -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Codystar&display=swap" rel="stylesheet">
+	</head>
+	<body class="is-preload">
 
-<nav id="topnav">
-   <a id="logo" class="nav-link" href="#">Bullshit Jobs</a>
-   <a class="nav-link" href="share.html">Share</a>
-   <a class="nav-link" href="index.html">Browse</a>
+		<!-- Header -->
+			<header id="header">
+				<h1>Eventually</h1>
+				<p>A simple template for telling the world when you'll launch<br />
+				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+			</header>
 
-   <a id="about" class="nav-link" href="#">About Me</a>
-</nav>
+		<!-- Signup Form -->
+			<form id="signup-form" method="post" action="https://script.google.com/macros/s/AKfycbxW9zmBoto4JyZXomv0x0N5Rr-SB3yqCxvVFh0K44aFwqBkXV725EMqRAK6exSGHipO/exec">
+				<input type="email" name="Email" id="email" placeholder="Email Address" />
+				<input type="text" name="Name" id="name" placeholder="Name" />
+				<input type="submit" value="Sign Up" />
+			</form>
 
-<h1>Bullshit Jobs</h1>
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/khrisdai/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Kinetic Daikon</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
 
-<iframe src='https://app.mural.co/embed/ab8a2d80-8b68-42a9-9fd1-ce2d98e3c5f0'
-        width='100%'
-        height='480px'
-        style='min-width: 640px; min-height: 480px; background-color: #f4f4f4; border: 1px solid #efefef'
-        sandbox='allow-same-origin allow-scripts allow-modals allow-popups allow-popups-to-escape-sandbox'>
-</iframe>
+		<!-- Scripts -->
+			<script src="assets/js/main.js"></script>
 
-</body>
+	</body>
 </html>
