--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Khris is currently idle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,32 +14,38 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Codystar&display=swap" rel="stylesheet">
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>Until Next Time</h1>
+				<p><br />
+				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
+				Sign up for updates when the next big (or small) thing is ready for launch.<br />
+				Let's keep in touch!
+				</p>
 			</header>
 
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="https://script.google.com/macros/s/AKfycbx_UefudVapsz8E6Xuzu-TWfgJDFrl80XiQwNJMQ28/dev">
-				<input type="email" name="Email" id="email" placeholder="Email Address" />
 				<input type="text" name="Name" id="name" placeholder="Name" />
+				<input type="email" name="Email" id="email" placeholder="Personal Email Address" />
+				<input type="text" name="Message" id="message" placeholder="Leave a Message" />
 				<input type="submit" value="Sign Up" />
 			</form>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/khrisdai/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.instagram.com/khrisdai/" style="text-decoration-line:none;" target="_blank" class="fa-brands fa-instagram fa-lg"></a></li>
+					<!-- <li><a href="https://github.com/khrisdai/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
+					<li><a href="#" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Kinetic Daikon</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Khris Dai</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
