--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h1>Until Next Time</h1>
 				<p><br />
 				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
-				Sign up for updates when the next big (or small) thing is ready for launch.<br />
+				Leave your contact info to hear about the next big (or small) thing.<br />
 				Let's keep in touch!
 				</p>
 			</header>
@@ -33,15 +33,14 @@
 			<form id="signup-form" method="post" action="https://script.google.com/macros/s/AKfycbx_UefudVapsz8E6Xuzu-TWfgJDFrl80XiQwNJMQ28/dev">
 				<input type="text" name="Name" id="name" placeholder="Name" />
 				<input type="email" name="Email" id="email" placeholder="Personal Email Address" />
-				<input type="text" name="Message" id="message" placeholder="Leave a Message" />
-				<input type="submit" value="Sign Up" />
+				<input type="text" name="Message" id="message" placeholder="Leave a Message (optional)" />
+				<input type="submit" value="Submit" />
 			</form>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/khrisdai/" style="text-decoration-line:none;" target="_blank" class="fa-brands fa-instagram fa-lg"></a></li>
-					<!-- <li><a href="https://github.com/khrisdai/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 					<li><a href="#" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a></li>
 				</ul>
 				<ul class="copyright">
