--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/khrisdai/" style="text-decoration-line:none;" target="_blank" class="fa-brands fa-instagram fa-lg"></a></li>
-					<li><a href="#" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a></li>
+					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Khris Dai</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
