--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Khris is currently idle</title>
+		<title>Khris is currently idle 😃</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 				<h1>Until Next Time</h1>
 				<p><br />
 				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
-				Leave your contact info to hear about the next big (or small) thing.<br />
-				Let's keep in touch!
-				</p>
+				Leave your contact info to hear about the next big 🦄 (or small) thing.<br /></p>
+				<p style="font-family: 'Codystar', cursive">Let's keep in touch</p>
+				<p>Fill out <a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Google Form</a> or enter info below.</p>
 			</header>
 
 		<!-- Signup Form -->
