--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<p><br />
 				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
 				Leave your contact info to hear about the next big 🦄 (or small) thing.<br /></p>
-				<p style="font-family: 'Codystar', cursive">Let's keep in touch</p>
+				<p style="font-family: 'Codystar', cursive">Let's keep in touch 🩷</p>
 				<p>Fill out <a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Google Form</a> or enter info below.</p>
 			</header>
 
