--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
 				Leave your contact info to hear about the next big 🦄 (or small) thing.<br /></p>
 				<p style="font-family: 'Codystar', cursive; font-weight: bold;">Let's keep in touch 🩷</p>
-				<p>Fill out <a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Google Form</a> or enter info below.</p>
+				<ul class="icons">
+					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
+						<a href="https://www.instagram.com/khrisdai/" target="_blank" >&nbsp;Instagram</a></li>
+					<li >｜</li>
+					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a>
+						<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >&nbsp;LinkedIn</a></li>
+					<li>｜</li>
+					<li><a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Fill out Google Form</a> or enter YOUR contact info below</li>
+				</ul>
 			</header>
 
 		<!-- Signup Form -->
@@ -39,10 +47,12 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+				<!--
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/khrisdai/" style="text-decoration-line:none;" target="_blank" class="fa-brands fa-instagram fa-lg"></a></li>
 					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a></li>
 				</ul>
+				-->
 				<ul class="copyright">
 					<li>&copy; Khris Dai</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
