--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a>
 						<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >&nbsp;LinkedIn</a></li>
 					<li>｜</li>
-					<li><a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Fill out Google Form</a> or enter YOUR contact info below</li>
+					<li><a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
+						<a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">&nbsp;Enter YOUR contact info in Google Form</a> or below</li>
 				</ul>
 			</header>
 
