--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
 						<a href="https://www.instagram.com/khrisdai/" target="_blank" >&nbsp;Instagram</a></li>
 					<li >｜</li>
-					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a>
+					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a>
 						<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >&nbsp;LinkedIn</a></li>
 					<li>｜</li>
 					<li><a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
