--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<p><br />
 				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
 				Leave your contact info to hear about the next big 🦄 (or small) thing.<br /></p>
-				<p style="font-family: 'Codystar', cursive; font-weight: bold;">Let's keep in touch 🩷</p>
+				<p style="font-family: 'Codystar', cursive; font-weight: bold;">Let's keep in touch 💟</p>
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
 						<a href="https://www.instagram.com/khrisdai/" target="_blank" >&nbsp;Instagram</a></li>
