--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				<p style="font-family: 'Codystar', cursive; font-weight: bold;">Let's keep in touch 💟</p>
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
-						<a href="https://www.instagram.com/khrisdai/" target="_blank" >&nbsp;Instagram</a></li>
+						&nbsp;<a href="https://www.instagram.com/khrisdai/" target="_blank" >Instagram</a></li>
 					<li >｜</li>
 					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a>
-						<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >&nbsp;LinkedIn</a></li>
+						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
 					<li>｜</li>
 					<li><a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
-						<a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">&nbsp;Enter YOUR contact info here</a> or below</li>
+						&nbsp;<a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Enter YOUR contact info here</a> or below</li>
 				</ul>
 			</header>
 
