update to airtable link

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a>
 						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
 					<li>｜</li>
-					<li><a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
-						&nbsp;<a href="https://forms.gle/Fd1MaNig2ceuEcMR6" target="_blank">Enter YOUR contact info here</a> or below</li>
+					<li><a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
+						&nbsp;<a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank">Enter YOUR contact info here</a> or below</li>
 				</ul>
 			</header>
 
