--- a/index.html
+++ b/index.html
@@ -34,17 +34,19 @@
 						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
 					<li>｜</li>
 					<li><a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
-						&nbsp;<a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank">Enter YOUR contact info here</a> or below</li>
+						&nbsp;<a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank">Enter YOUR Contact Info</a></li>
 				</ul>
 			</header>
 
 		<!-- Signup Form -->
+		<!--
 			<form id="signup-form" method="post" action="https://script.google.com/macros/s/AKfycbx_UefudVapsz8E6Xuzu-TWfgJDFrl80XiQwNJMQ28/dev">
 				<input type="text" name="Name" id="name" placeholder="Name" />
 				<input type="email" name="Email" id="email" placeholder="Personal Email Address" />
 				<input type="text" name="Message" id="message" placeholder="Leave a Message (optional)" />
 				<input type="submit" value="Submit" />
 			</form>
+		-->
 
 		<!-- Footer -->
 			<footer id="footer">
