--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 				Leave your contact info to hear about the next big 🦄 (or small) thing.<br /></p>
 				<p style="font-family: 'Codystar', cursive; font-weight: bold;">Let's keep in touch 💟</p>
 				<ul class="icons">
-					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
-						&nbsp;<a href="https://www.instagram.com/khrisdai/" target="_blank" >Instagram</a></li>
-					<li >｜</li>
-					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a>
-						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
-					<li>｜</li>
 					<li><a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
 						&nbsp;<a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank">Enter YOUR Contact Info</a></li>
+				</ul>
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a>
+						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
+					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
+						&nbsp;<a href="https://www.instagram.com/khrisdai/" target="_blank" >Instagram</a></li>
 				</ul>
 			</header>
 
