--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Codystar&display=swap" rel="stylesheet">
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+		<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 	</head>
 	<body class="is-preload">
 
@@ -35,6 +36,7 @@
 						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
 					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
 						&nbsp;<a href="https://www.instagram.com/khrisdai/" target="_blank" >Instagram</a></li>
+					<li><iconify-icon icon="simple-icons:substack" width="13" height="13"></iconify-icon>&nbsp;<a href="#" target="_blank" >Substack</a></li>
 				</ul>
 			</header>
 
