--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
 					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
 						&nbsp;<a href="https://www.instagram.com/khrisdai/" target="_blank" >Instagram</a></li>
-					<li><iconify-icon icon="simple-icons:substack" width="13" height="13"></iconify-icon>&nbsp;<a href="#" target="_blank" >Substack</a></li>
+					<li><iconify-icon icon="simple-icons:substack" width="13" height="13"></iconify-icon>&nbsp;<a href="https://khrisdai.substack.com/" target="_blank" >Substack</a></li>
 				</ul>
 			</header>
 
