--- a/index.html
+++ b/index.html
@@ -1,71 +1,121 @@
 <!DOCTYPE HTML>
 <!--
-	Eventually by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Khris is currently idle 😃</title>
+		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!-- Google Font -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Codystar&display=swap" rel="stylesheet">
-		<!-- Font Awesome -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
-		<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-		<!-- Header -->
-			<header id="header">
-				<h1>Until Next Time</h1>
-				<p><br />
-				As I embark on my "eat, play, chill" journey, I created this site to keep us connected.<br />
-				Leave your contact info to hear about the next big 🦄 (or small) thing.<br /></p>
-				<p style="font-family: 'Codystar', cursive; font-weight: bold;">Let's keep in touch 💟</p>
-				<ul class="icons">
-					<li><a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank" class="fa-regular fa-address-book fa-lg"></a>
-						&nbsp;<a href="https://airtable.com/shr19Sn7IfB9eN1oY" target="_blank">Enter YOUR Contact Info</a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a>
-						&nbsp;<a href="https://www.linkedin.com/in/khrisdai/" target="_blank" >LinkedIn</a></li>
-					<li><a href="https://www.instagram.com/khrisdai/" target="_blank" class="fa-brands fa-instagram fa-lg"></a>
-						&nbsp;<a href="https://www.instagram.com/khrisdai/" target="_blank" >Instagram</a></li>
-					<li><a href="" target="_blank" class="fa-brands fa-medium"></a>
-						&nbsp;<a href="https://medium.com/@khrisdai" target="_blank" >Medium</a></li>
-					<li><iconify-icon icon="simple-icons:substack" width="13" height="13"></iconify-icon>&nbsp;<a href="https://khrisdai.substack.com/" target="_blank" >Substack</a></li>
-				</ul>
-			</header>
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
 
-		<!-- Signup Form -->
-		<!--
-			<form id="signup-form" method="post" action="https://script.google.com/macros/s/AKfycbx_UefudVapsz8E6Xuzu-TWfgJDFrl80XiQwNJMQ28/dev">
-				<input type="text" name="Name" id="name" placeholder="Name" />
-				<input type="email" name="Email" id="email" placeholder="Personal Email Address" />
-				<input type="text" name="Message" id="message" placeholder="Leave a Message (optional)" />
-				<input type="submit" value="Submit" />
-			</form>
-		-->
+							<!-- Logo -->
+								<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">100 Ideas</span>
+								</a>
+						</div>
+					</header>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<!--
-				<ul class="icons">
-					<li><a href="https://www.instagram.com/khrisdai/" style="text-decoration-line:none;" target="_blank" class="fa-brands fa-instagram fa-lg"></a></li>
-					<li><a href="https://www.linkedin.com/in/khrisdai/" target="_blank" class="fa-brands fa-linkedin-in fa-lg"></a></li>
-				</ul>
-				-->
-				<ul class="copyright">
-					<li>&copy; Khris Dai</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="https://drive.google.com/file/d/1imm4QgKNtACwQQKVTmlIw8F6_RenXuKL/view?usp=drive_link">
+										<h2>Fengshui Master AI</h2>
+										<div class="content">
+											<p>An AI Fengshui Master, built with OpenAI.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<a href="https://drive.google.com/file/d/1MtatQBioOodIDxU4SkhmDr2-vo55lJOd/view?usp=drive_link">
+										<h2>Benefits Assistant AI</h2>
+										<div class="content">
+											<p>Benefits assistant AI, built with OpenAI, fine-tuned with proprietary data.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<a href="https://earnest-beijinho-8ce106.netlify.app">
+										<h2>Shark Tank Meets Tinder</h2>
+										<div class="content">
+											<p>Tinder style startup selector, built with Flutter.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="">
+										<h2>Project 4</h2>
+										<div class="content">
+											<p>coming soon</p>
+										</div>
+									</a>
+								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="">
+										<h2>Project 5</h2>
+										<div class="content">
+											<p>coming soon</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<a href="">
+										<h2>Project 6</h2>
+										<div class="content">
+											<p>coming soon</p>
+										</div>
+									</a>
+								</article>
+							</section>
+						</div>
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="copyright">
+								<li>&copy; Khris Dai. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
+			</div>
 
 		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
 	</body>
