update to 100 ideas

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<a href="">
 										<h2>Project 4</h2>
 										<div class="content">
-											<p>coming soon</p>
+											<p>coming soon...</p>
 										</div>
 									</a>
 								</article>
@@ -82,7 +82,7 @@
 									<a href="">
 										<h2>Project 5</h2>
 										<div class="content">
-											<p>coming soon</p>
+											<p>coming soon...</p>
 										</div>
 									</a>
 								</article>
@@ -93,7 +93,7 @@
 									<a href="">
 										<h2>Project 6</h2>
 										<div class="content">
-											<p>coming soon</p>
+											<p>coming soon...</p>
 										</div>
 									</a>
 								</article>
