--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="https://drive.google.com/file/d/1imm4QgKNtACwQQKVTmlIw8F6_RenXuKL/view?usp=drive_link">
-										<h2>Fengshui Master AI</h2>
+										<h2>Feng shui Master</h2>
 										<div class="content">
 											<p>An AI Fengshui Master, built with OpenAI.</p>
 										</div>
@@ -48,9 +48,9 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="https://drive.google.com/file/d/1MtatQBioOodIDxU4SkhmDr2-vo55lJOd/view?usp=drive_link">
-										<h2>Benefits Assistant AI</h2>
+										<h2>Benefits Assistant</h2>
 										<div class="content">
-											<p>Benefits assistant AI, built with OpenAI, fine-tuned with proprietary data.</p>
+											<p>An AI benefits assistant, built with OpenAI, fine-tuned with proprietary data.</p>
 										</div>
 									</a>
 								</article>
@@ -61,7 +61,7 @@
 									<a href="https://earnest-beijinho-8ce106.netlify.app">
 										<h2>Shark Tank Meets Tinder</h2>
 										<div class="content">
-											<p>Tinder style startup selector, built with Flutter.</p>
+											<p>Tinder style idea selector/screener, built with Flutter.</p>
 										</div>
 									</a>
 								</article>
@@ -70,9 +70,9 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="">
-										<h2>Project 4</h2>
+										<h2>Heard</h2>
 										<div class="content">
-											<p>coming soon...</p>
+											<p>A software-focused hearing assistant for seniors.</p>
 										</div>
 									</a>
 								</article>
@@ -81,9 +81,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="">
-										<h2>Project 5</h2>
+										<h2>Med Talk</h2>
 										<div class="content">
-											<p>coming soon...</p>
+											<p>An AI-powered medical translator.</p>
 										</div>
 									</a>
 								</article>
