--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="">
-										<h2>Project 6</h2>
+										<h2>Nostalgians</h2>
 										<div class="content">
-											<p>coming soon...</p>
+											<p>An online catalogue/marketplace for nostalgic items globally, with a modern spin.</p>
 										</div>
 									</a>
 								</article>
