--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                             <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/project-t.html">Learn More</a>
                                         </div>
                                         <div class="col-4">
-                                            <img class="img-fluid" src="assets/slide1.png" alt="Project Tetromino">
+                                            <img class="img-fluid" src="assets/Slide1.png" alt="Project Tetromino">
                                         </div>
                                     </div>
                                 </div>
@@ -85,7 +85,7 @@
                                             <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="#">Coming Soon</a>
                                         </div>
                                         <div class="col-4">
-                                            <img class="img-fluid" src="assets/slide2.png" alt="Sandwich Generation" />
+                                            <img class="img-fluid" src="assets/Slide2.png" alt="Sandwich Generation" />
                                         </div>
                                     </div>
                                 </div>
