--- a/project-s.html
+++ b/project-s.html
@@ -44,11 +44,12 @@
                                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="project-t.html">Project Tetromino</a></li>
-                                    <li><a class="dropdown-item" href="#">Project S@ndwich</a></li>
+                                    <li><a class="dropdown-item" href="project-s.html">Project S@ndwich</a></li>
+                                    <li><a class="dropdown-item" href="project-m.html">Project MBTI</a></li>
                                     <!--<li><hr class="dropdown-divider" /></li>-->
                                 </ul>
                             </li>
-                            <!--<li class="nav-item"><a class="nav-link" href="#">About</a></li>-->
+                            <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -62,9 +63,11 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Project Description-->
+                        <!--
                         <section>
                             <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
+                                <div class="card-body p-5">   
+                                    <p>We recently conducted a survey targeting first-generation American immigrants, aiming to gain insight into their parents' healthcare needs and identify any gaps. The results were surprising, so we have decided to share these findings with everyone.</p>
                                     <p>最近，我们进行了一项针对第一代美国移民的问卷调查，旨在深入了解他们父母的医疗需求以及目前存在的不足之处。调查结果出乎我们的意料，因此我们决定与大家分享这些发现。</p>
                                     <div class="pb-3"></div>
                                     <h5 class="fw-bolder mb-0"><span class="text-primary d-inline">Groundbreaking Discovery Unveils New Insights into Climate Change</span></h5>
@@ -96,31 +99,18 @@
                                     </div>
                                 </div>
                             </div>
-                        </section>
-                        <!-- Skills Section-->
+                        </section>-->
+
                         <section>
-                            <!-- Skillset Card-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
-                                    <!-- Languages list-->
                                     <div class="mb-0">
                                         <div class="d-flex align-items-center mb-4">
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-patch-question-fill"></i></div>
-                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">CTA</span></h3>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">CSS</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript</div></div>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Ruby</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Node.js</div></div>
+                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Survey 问卷调查</span></h3>
                                         </div>
                                         <div class="pb-3"></div>
                                         <div>
-                                            <p>this was the original survey.</p>
                                             <p>The survey is intended for first generation immigrants whose parents are new to the U.S. healthcare system. Our goal is to gauge their healthcare needs and identify any gaps. Please select the preferred language to start the survey.</p>
                                             <p>此问卷调查面向第一代美国移民。我们的目标是了解他们的父母的医疗需求以及现有状况的不足之处。请选择您的语言开始填写。</p>
                                             <a class="btn btn-outline-dark" href="https://airtable.com/appHrTo5xzSuKb9C6/shrHQeEafeqNqXojC" target="_blank">English</a>
