--- a/resources.html
+++ b/resources.html
@@ -56,7 +56,7 @@
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resources</span></h1>
-                        <p class="lead text-muted pt-sm-3">Welcome to my blog, your go-to destination for insightful articles and practical tips. Enjoy exploring!</p>
+                        <p class="lead text-muted pt-sm-3">Your go-to destination for insightful articles and practical tips. Enjoy exploring!</p>
                     </div>
                 </div>
             </section>
@@ -83,7 +83,7 @@
                     <div class="card shadow-sm">
                         <img src="assets/resources/Slide2.png" alt="coming soon">
                         <div class="card-body">
-                        <p class="card-text">Decoding the Dilemma: Why 50% of Provider Directories Remain Inaccurate in 2024</p>
+                        <p class="card-text">Minesweepter Healthcare Edition<br />Can We Change the Game?</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-dark">Read</button>
