--- a/resources.html
+++ b/resources.html
@@ -83,7 +83,7 @@
                     <div class="card shadow-sm">
                         <img src="assets/resources/Slide2.png" alt="coming soon">
                         <div class="card-body">
-                        <p class="card-text">Minesweepter Healthcare Edition<br />Can We Change the Game?</p>
+                        <p class="card-text">Minesweeper Healthcare Edition<br />Can We Change the Game?</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-dark">Read</button>
