--- a/project-m.html
+++ b/project-m.html
@@ -60,7 +60,7 @@
                 <div class="text-center mb-5">
                     <div class="col-md-8 mx-auto">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Project MBTI</span></h1>
-                        <p class="lead text-muted pt-sm-3">With a curated set of personas based on individuals' healthcare needs, preferences, and behaviors, project MBTI aims to simplify the decision-making process to empower you to make informed choices for your health coverage.</p>
+                        <p class="lead text-muted pt-sm-3">With a curated set of personas based on individuals&apos; healthcare needs, preferences, and behaviors, project MBTI aims to simplify the decision-making process to empower you to make informed choices for your health coverage.</p>
                     </div>
                 </div>
                 <section>
