--- a/project-base.html
+++ b/project-base.html
@@ -16,7 +16,10 @@
         gtag('config', 'G-CCE37Z32EH');
         </script>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
+        <link rel="icon" href="assets/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" href="assets/favicon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
