--- a/project-s.html
+++ b/project-s.html
@@ -70,11 +70,11 @@
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">   
                                     <div class="row ps-2">
-                                        <div class="form-check col-2">
+                                        <div class="form-check col">
                                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
                                             <label class="form-check-label" for="flexRadioDefault1">English</label>
                                         </div>
-                                        <div class="form-check col-2">
+                                        <div class="form-check col">
                                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                                             <label class="form-check-label" for="flexRadioDefault2">中文</label>
                                         </div>
