minor format change

--- a/resources.html
+++ b/resources.html
@@ -55,7 +55,7 @@
                 </div>
             </nav>
             <!--Page Content-->
-            <section class="px-5 text-center container">
+            <section class="px-5 text-center container my-5">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resources</span></h1>
