--- a/project-s.html
+++ b/project-s.html
@@ -87,12 +87,12 @@
                                         <div class="pb-3"></div>
                                         <div class="row align-items-center gx-5">
                                             <div class="col-lg-6">
-                                                <div>compiling results...</div>
+                                                <div>Over 75% of the people surveyed stay in the U.S. for over 3 months</div>
                                             </div>
                                             <div class="col text-center text-lg-center mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
                                                     <div class="small fw-bolder mb-2">Length of Stay</div>
-                                                    <div><img src="assets/donut-chart-example.svg" style="width: 100%;"></div>
+                                                    <div><img src="assets/survey/survey_1.png" style="width: 100%;"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -123,7 +123,7 @@
                                             <div class="col text-center text-lg-center mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
                                                     <div class="small fw-bolder mb-2">逗留时间</div>
-                                                    <div><img src="assets/donut-chart-example.svg" style="width: 100%;"></div>
+                                                    <div><img src="assets/survey/survey_1.png" style="width: 100%;"></div>
                                                 </div>
                                             </div>
                                         </div>
