update survey results

--- a/project-s.html
+++ b/project-s.html
@@ -87,7 +87,12 @@
                                         <div class="pb-3"></div>
                                         <div class="row align-items-center gx-5">
                                             <div class="col-lg-6">
-                                                <div>Over 75% of the people surveyed stay in the U.S. for over 3 months</div>
+                                                <div>
+                                                    <p>Over 75% of the people surveyed say their parents stay in the U.S. for over 3 months. Most are visiting on a B2 visitor visa.</p>
+                                                    <p>The age of their parents range from 55-80, with an average age of 65.</p>
+                                                    <p>85% of them have one or more chronic conditions such as hypertension, diabetes.</p>
+                                                    <p>2/3 of them take prescription drugs.</p>
+                                                </div>
                                             </div>
                                             <div class="col text-center text-lg-center mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
@@ -97,18 +102,23 @@
                                             </div>
                                         </div>
                                         <div class="pb-3"></div>
-                                        <h5 class="fw-bolder mb-0"><span class="text-primary d-inline">Survey Results</span></h5>
+                                       <h5 class="fw-bolder mb-0"><span class="text-primary d-inline">Survey Results</span></h5>
                                         <div class="pb-3"></div>
+                                        
                                         <div class="row align-items-center gx-5">
                                             <div class="col-lg-6">
-                                                <div>compiling results...</div>
+                                                <div>
+                                                    <p>60% purchased travel insurance or short-term health insurance.</p>
+                                                    <p>The rest 40% say they did not purchase insurance because (1) they didn't find existing products valuable (e.g., too expensive and too restrictive) (2) didn't think it would be needed (3) not sure what to buy.</p>
+                                                    <p>We ask survey participants how concerned they are about their ability to take care of their parents financially and emotionally. Most rated emotional concern to be higher than financial. </p>
+                                                </div>
                                             </div>
-                                            <div class="col text-center text-lg-center mb-4 mb-lg-0">
+                                            <!--<div class="col text-center text-lg-center mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
                                                     <div class="small fw-bolder mb-2">Length of Stay</div>
                                                     <div><img src="assets/donut-chart-example.svg" style="width: 100%;"></div>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                         </div>
                                     </div>
                                     <div id="chineseText" class="visually-hidden">
@@ -118,7 +128,12 @@
                                         <div class="pb-3"></div>
                                         <div class="row align-items-center gx-5">
                                             <div class="col-lg-6">
-                                                <div>敬请等待更新</div>
+                                                <div>
+                                                    <p>超过75%的受访者表示，他们的父母在美国逗留超过3个月。大多数持B2探亲签证。</p>
+                                                    <p>父母的年龄在55至80岁之间，平均年龄为65岁。</p>
+                                                    <p>85%患有一种或多种慢性病，如高血压、糖尿病等。</p>
+                                                    <p>2/3的人需要服用处方药。</p>
+                                                </div>
                                             </div>
                                             <div class="col text-center text-lg-center mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
@@ -132,14 +147,18 @@
                                         <div class="pb-3"></div>
                                         <div class="row align-items-center gx-5">
                                             <div class="col-lg-6">
-                                                <div>敬请等待更新</div>
+                                                <div>
+                                                    <p>60%购买了旅行保险或短期健康保险</p>
+                                                    <p>剩下的40%表示他们没有购买保险，原因主要有三：（1）他们认为现有的产品价值不高（例如，价格太贵、限制太多）；（2）觉得不会用到；（3）不确定应该购买什么。</p>
+                                                    <p>我们问调查参与者对于自己是否能够在经济层面和情感层面照顾好父母的担忧程度。大多数人认为情感上的担忧要大于经济上的担忧。</p>
+                                                </div>
                                             </div>
-                                            <div class="col text-center text-lg-center mb-4 mb-lg-0">
+                                            <!--<div class="col text-center text-lg-center mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
                                                     <div class="small fw-bolder mb-2">逗留时间</div>
                                                     <div><img src="assets/donut-chart-example.svg" style="width: 100%;"></div>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                         </div>
                                     </div>
                                 </div>
